apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'application'
apply plugin: 'signing'

mainClassName = 'com.tools.jdk.basic.StringUtils'
sourceCompatibility = 1.8
targetCompatibility = 1.8
version = '1.0.0'
group = 'org.commontools'
description = "A bootstrap Java project with gradle,  Mockito, FEST-Assert 2 and Cobertura"

configurations.all {
    //http://www.gradle.org/docs/current/dsl/org.gradle.api.artifacts.ResolutionStrategy.html
    resolutionStrategy {
        // fail eagerly on version conflict (includes transitive dependencies)
        failOnVersionConflict()
        
        // force certain versions of dependencies (including transitive)
        force 'commons-codec:commons-codec:1.11','commons-beanutils:commons-beanutils:1.9.1', 'org.slf4j:slf4j-api:1.7.7','commons-collections:commons-collections:3.2.1', 'commons-logging:commons-logging:1.1.1'

        // cache dynamic versions for 1 minutes
        cacheDynamicVersionsFor 1*60, 'seconds'

        // don't cache changing modules at all
        cacheChangingModulesFor 0, 'seconds'
    }
}



buildscript {
// The "buildscript" configuration section is for gradle itself, Oftentimes the repository section is the same for both,
// If I need maven central for both my buildscript and my project, do I need to declare it twice? Yes, you need to specify it twice then indeed.
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "http://repo.maven.apache.org/maven2" }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.2.RELEASE")
        classpath 'org.markdownj:markdownj:0.3.0-1.0.2b4'
        classpath (group: 'org.apache.activemq', name: 'activemq-all', version:'5.10.0', changing: true)
    }
}
if (!JavaVersion.current().java7Compatible) {
    throw new IllegalStateException("Must be built with Java 7 or higher")
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "http://repo.springsource.org/plugins-release" }
    maven { url "http://repo.maven.apache.org/maven2" }
    maven { url "http://repo.spring.io/libs-release" }
    maven { url "http://repo.spring.io/libs-snapshot" }
    maven { url "http://maven.vaadin.com/vaadin-addons" }
    maven { url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases"}
    maven { url "https://oss.sonatype.org/content/repositories/google-releases/" }

 }
jar {
    baseName = 'CommonTools'
    version = '1.0'
}

dependencies {
//    The compile configuration is now deprecated and should be replaced by implementation or api
//    compile with implementation (if you don't need transitivity) or api (if you need transitivity)
//    testCompile with testImplementation
//    debugCompile with debugImplementation
//    androidTestCompile with androidTestImplementation


//    The api configuration should be used to declare dependencies which are exported by the library API,
//    whereas the implementation configuration should be used to declare dependencies which are internal to the component.

    implementation platform('io.projectreactor:reactor-bom:Bismuth-RELEASE')
    implementation 'io.projectreactor:reactor-core'
    implementation group: 'org.apache.activemq', name: 'activemq-all', version:'5.10.0', changing: true
    implementation group: 'com.sun.jersey', name: 'jersey-client', version:'1.18.1'
    implementation group: 'com.sun.jersey.contribs', name: 'jersey-apache-client', version:'1.18.1'
    implementation ("joda-time:joda-time:2.10.1"){force = true}
    implementation group: 'org.jvnet.jaxb2_commons', name: 'jaxb2-basics-runtime', version:'0.6.5'
    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
    implementation group: 'commons-validator', name: 'commons-validator', version: '1.5.1'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.7'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.2'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.1.2'
    implementation group: 'org.hibernate', name: 'hibernate-core', version: '3.6.7.Final'
    implementation group: 'dom4j', name: 'dom4j', version:'1.6.1'
    implementation group: 'org.springframework', name: 'spring-context', version:'5.1.6.RELEASE'
    implementation group: 'com.google.guava', name: 'guava', version: '27.1-jre'
    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.58'
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
    implementation group: 'org.json', name: 'json', version: '20180130'
    implementation group: 'io.vavr', name: 'vavr', version: '1.0.0-alpha-3'
    implementation group: 'one.util', name: 'streamex', version: '0.7.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
    implementation 'org.projectlombok:lombok:1.16.18'
    implementation 'io.reactivex.rxjava3:rxjava:3.0.0-RC3'

    testImplementation group: 'xmlunit', name: 'xmlunit', version: '1.5'
    testImplementation group: 'junit', name: 'junit', version: '4.+'
    testImplementation group: 'org.mockito', name:'mockito-all' , version:'1.9.5'

}

// ensure that test resources (src/test/resources) are added to CLASSPATH;
// see http://forums.gradle.org/gradle/topics/tests_arent_executed_when_setting_the_test_runtimeclasspath and
// http://gradle.org/docs/current/dsl/org.gradle.api.tasks.testing.Test.html#org.gradle.api.tasks.testing.Test:classpath
sourceSets {
    main {
        runtimeClasspath = files(output.resourcesDir) + runtimeClasspath
    }
    test {
        runtimeClasspath = files(output.resourcesDir) + runtimeClasspath
    }
}



task bu_wrapper(type: Wrapper) {
    gradleVersion = '1.12'
}


// below is for Markerdownj
import com.petebevin.markdown.MarkdownProcessor

class MarkdownFilter extends FilterReader {
    MarkdownFilter(Reader input) {
        super(new StringReader(new MarkdownProcessor().markdown(input.text)))
    }
}

task bu_markdown(type: Copy) {
    from 'src/markdown'
    include '*.md'
    into 'build/labs'
    rename { it - '.md' + '.html' }
    filter MarkdownFilter
}

// embeded event buildFinished
gradle.buildFinished { buildResult ->
    println "TBU BUILD FINISHED"
    println "build failure infomration if any - " + buildResult.failure
}


tasks.addRule('Rule Usage: ping<Hostname>') { String taskName ->
    if(taskName.startsWith('ping')) {
        task(taskName) {
            ext.hostname = taskName - 'ping'
            doLast {
                def url = new URL("http://${ext.hostname}")
                def logString
                try {
                    def pageContent = url.text
                    // Do some regex matching on pageContent
                    logString = "${new Date()}\t${ext.hostname}\tUP\n"
                    ext.up = true
                } catch(UnknownHostException e) {
                    logString = "${new Date()}\t${ext.hostname}\tUNKNOWN HOST\n"
                    ext.up = false
                } catch(ConnectException e) {
                    logString = "${new Date()}\t${ext.hostname}\tDOWN\n"
                    ext.up = false
                }
                file(pingLogDir).mkdirs()
                file("${pingLogDir}/ping.log") << logString
            }
        }
    }
}

task bu_fail {
    doLast {
        throw new Exception("Build failed")
    }
}



task bu_cleanTempDir(type: Delete) {
    delete fileTree(dir: "tempDir")
}


ext {
    pingLogDir = "${buildDir}/reachable"
}

